--- a/src/app.css
+++ b/src/app.css
@@ -10,6 +10,8 @@
     }
 
     :root {
+        --radius: 0.3rem;
+
         --background: 0 0% 100%;
         --foreground: 20 14.3% 4.1%;
         --card: 0 0% 100%;
@@ -29,7 +31,16 @@
         --border: 20 5.9% 90%;
         --input: 20 5.9% 90%;
         --ring: 20 14.3% 4.1%;
-        --radius: 0.3rem;
+
+        /* Sidebar styles. */
+        --sidebar-background: 0 0% 98%;
+        --sidebar-foreground: 240 5.3% 26.1%;
+        --sidebar-primary: var(--primary);
+        --sidebar-primary-foreground: var(--primary-foreground);
+        --sidebar-accent: var(--accent);
+        --sidebar-accent-foreground: var(--accent-foreground);
+        --sidebar-border: var(--border);
+        --sidebar-ring: var(--ring);
     }
     .dark {
         --background: 20 14.3% 4.1%;
@@ -51,6 +62,16 @@
         --border: 12 6.5% 15.1%;
         --input: 12 6.5% 15.1%;
         --ring: 35.5 91.7% 32.9%;
+
+        /* Sidebar styles. */
+        --sidebar-background: 240 5.9% 10%;
+        --sidebar-foreground: 240 4.8% 95.9%;
+        --sidebar-primary: var(--primary);
+        --sidebar-primary-foreground: var(--primary-foreground);
+        --sidebar-accent: var(--accent);
+        --sidebar-accent-foreground: var(--accent-foreground);
+        --sidebar-border: var(--border);
+        --sidebar-ring: var(--ring);
     }
 }
 
