--- a/src/app.css
+++ b/src/app.css
@@ -80,7 +80,7 @@
         @apply border-border;
     }
     body {
-        @apply bg-background text-foreground transition-colors font-sans;
+        @apply bg-background text-foreground transition-colors font-sans animate-fade-in-delayed;
     }
 }
 
