--- a/src/app.css
+++ b/src/app.css
@@ -20,8 +20,8 @@
         --popover-foreground: 20 14.3% 4.1%;
         --primary: 47.9 95.8% 53.1%;
         --primary-foreground: 26 83.3% 14.1%;
-        --secondary: 60 4.8% 95.9%;
-        --secondary-foreground: 24 9.8% 10%;
+        --secondary: 24 9.8% 10%;
+        --secondary-foreground: 60 4.8% 95.9%;
         --muted: 60 4.8% 95.9%;
         --muted-foreground: 25 5.3% 44.7%;
         --accent: 60 4.8% 95.9%;
@@ -51,8 +51,8 @@
         --popover-foreground: 60 9.1% 97.8%;
         --primary: 47.9 95.8% 53.1%;
         --primary-foreground: 26 83.3% 14.1%;
-        --secondary: 12 6.5% 15.1%;
-        --secondary-foreground: 60 9.1% 97.8%;
+        --secondary: 60 9.1% 97.8%;
+        --secondary-foreground: 12 6.5% 15.1%;
         --muted: 12 6.5% 15.1%;
         --muted-foreground: 24 5.4% 63.9%;
         --accent: 12 6.5% 15.1%;
@@ -128,7 +128,7 @@
      */
     .rs-font-with-shadow {
         @apply rs-font;
-        text-shadow: .063rem .063rem black;
+        text-shadow: .042em .042em black;
     }
 
     /**
