--- a/src/app.css
+++ b/src/app.css
@@ -84,6 +84,23 @@
     }
 }
 
+@layer base {
+    /* Provides view transitions to the app for users who haven't set a preference for reduced motion. */
+    @media (prefers-reduced-motion: no-preference) {
+        :root::view-transition-old(root) {
+            animation:
+                90ms cubic-bezier(0.4, 0, 1, 1) both fade-out,
+                300ms cubic-bezier(0.4, 0, 0.2, 1) both slide-to-left;
+        }
+    
+        :root::view-transition-new(root) {
+            animation:
+                210ms cubic-bezier(0, 0, 0.2, 1) 90ms both fade-in,
+                300ms cubic-bezier(0.4, 0, 0.2, 1) both slide-from-right;
+        }
+    }
+}
+
 @layer utilities {
     /*
      * Helps size content appropriately. Handles content width and padding. Use on outer parents.
